--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -8,7 +8,7 @@
     </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content>
-    <div class="contacttitles" align="right">
+    <div class="contacttitles" align="left">
       <h1 class="contanttitles">Main Coordinators</h1>
     </div>
     <div align="center" class="contactpanel">
@@ -18,14 +18,14 @@
       <button class="yellowbutton contactbutton">+393464764333</button>
     </div>
 
-    <div class="contacttitles" align="right">
+    <div class="contacttitles" align="left">
       <h1 class="contanttitles">Emergency</h1>
     </div>
     <div align="center" class="contactpanel">
       <button class="redbutton contactbutton">112</button>
     </div>
 
-    <div class="contacttitles" align="right">
+    <div class="contacttitles" align="left">
       <h1 class="contanttitles">Other</h1>
     </div>
 
