--- a/www/templates/pictures.html
+++ b/www/templates/pictures.html
@@ -8,85 +8,90 @@
   </ion-nav-bar>
 
 <link rel="stylesheet" href="css/pictures.css">
-  <ion-content>
-    <a class="button" ng-click="showImage(1)">try</a>
+  <ion-content class="test">
+    <!--<a class="button" ng-click="showImage(1)">try</a>-->
 
-    <div class="card">
-    <div class="item item-divider">Best Photos TODAY!</div>
-    <div>
-      <ul class="family-icon-scroller">
-        <li class="family-icon"><img ng-src="images/face-icons/face-crying.png" /></li>
-        <li class="family-icon"><img ng-src="images/face-icons/face-angry.png" /></li>
-        <li class="family-icon"><img ng-src="images/face-icons/face-asleep.png" /></li>
-        <li class="family-icon"><img ng-src="images/face-icons/face-confused.png" /></li>
-        <li class="family-icon"><img ng-src="images/face-icons/face-angel.png" /></li>
-        <li class="family-icon"><img ng-src="images/face-icons/face-devil-grin.png" /></li>
-        <li class="family-icon"><img ng-src="images/face-icons/face-embarrassed.png" /></li>
-        <li class="family-icon"><img ng-src="images/face-icons/face-foot-in-mouth.png" /></li>
-        <li class="family-icon"><img ng-src="images/face-icons/face-gearhead-female-smile.png" /></li>
-        <li class="family-icon"><img ng-src="images/face-icons/face-gearhead-male-smile.png" /></li>
-        <li class="family-icon"><img ng-src="images/face-icons/face-glasses.png" /></li>
-
-      </ul>
-    </div>
-    <!--<ion-slide>
-      <ion-list ho>
-        <ion-item>
-          <img height="100px" ng-src="../img/thirdday.png" ng-click="showImage(1)">
-        </ion-item>
-        <ion-item>
-          <img height="100px" ng-src="../img/thirdday.png" ng-click="showImage(1)">
-        </ion-item>
-        <ion-item>
-          <img height="100px" ng-src="../img/thirdday.png" ng-click="showImage(1)">
-        </ion-item>
-        <ion-item>
-          <img height="100px" ng-src="../img/thirdday.png" ng-click="showImage(1)">
-        </ion-item>
-        <ion-item>
-          <img height="100px" ng-src="../img/thirdday.png" ng-click="showImage(1)">
-        </ion-item>
-        <ion-item>
-          <img height="100px" ng-src="../img/thirdday.png" ng-click="showImage(1)">
-        </ion-item>
-      </ion-list>
-    </ion-slide>
-      <ion-scroll scrollbar-x="true" zooming="true" direction="x" style="width: 5000px; height: 80px">
-
-
-
-        <div scrollable="true" style="width: 5000px; height: px">
-          <img height="100px" ng-src="../img/thirdday.png" ng-click="showImage(1)">
-          <img height="100px" ng-src="../img/thirdday.png" ng-click="showImage(1)">
-          <img height="100px" ng-src="../img/thirdday.png" ng-click="showImage(1)">
-          <img height="100px" ng-src="../img/thirdday.png" ng-click="showImage(1)">
-          <img height="100px" ng-src="../img/thirdday.png" ng-click="showImage(1)">
-          <img height="100px" ng-src="../img/thirdday.png" ng-click="showImage(1)">
-          <img height="100px" ng-src="../img/thirdday.png" ng-click="showImage(1)">
-          <img height="100px" ng-src="../img/thirdday.png" ng-click="showImage(1)">
-        </div>
-      </ion-scroll>-->
-  </div>
-    <div class="card">
-      <div class="item item-divider">Photos from our TEAM</div>
+    <div class="card cardsetup">
+      <div style="font-family: 'Futura Regular'; background: transparent ; outline-style: none; font-size: 4vh; font-weight: bold" class="item item-divider">Best Photos TODAY!</div>
       <div>
         <ul class="family-icon-scroller">
-          <li class="family-icon"><img ng-src="images/face-icons/face-crying.png" /></li>
-          <li class="family-icon"><img ng-src="images/face-icons/face-angry.png" /></li>
-          <li class="family-icon"><img ng-src="images/face-icons/face-asleep.png" /></li>
-          <li class="family-icon"><img ng-src="images/face-icons/face-confused.png" /></li>
-          <li class="family-icon"><img ng-src="images/face-icons/face-angel.png" /></li>
-          <li class="family-icon"><img ng-src="images/face-icons/face-devil-grin.png" /></li>
-          <li class="family-icon"><img ng-src="images/face-icons/face-embarrassed.png" /></li>
-          <li class="family-icon"><img ng-src="images/face-icons/face-foot-in-mouth.png" /></li>
-          <li class="family-icon"><img ng-src="images/face-icons/face-gearhead-female-smile.png" /></li>
-          <li class="family-icon"><img ng-src="images/face-icons/face-gearhead-male-smile.png" /></li>
-          <li class="family-icon"><img ng-src="images/face-icons/face-glasses.png" /></li>
-
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow1.jpg" ng-click="showImage(101)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow2.jpg" ng-click="showImage(102)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow3.jpg" ng-click="showImage(103)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow4.jpg" ng-click="showImage(104)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow5.jpg" ng-click="showImage(105)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow6.jpg" ng-click="showImage(106)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow7.jpg" ng-click="showImage(107)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow8.jpg" ng-click="showImage(108)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow9.jpg" ng-click="showImage(109)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow10.jpg" ng-click="showImage(1010)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow11.jpg" ng-click="showImage(1011)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow12.jpg" ng-click="showImage(1012)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow13.jpg" ng-click="showImage(1013)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow14.jpg" ng-click="showImage(1014)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow15.jpg" ng-click="showImage(1015)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow16.jpg" ng-click="showImage(1016)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow17.jpg" ng-click="showImage(1017)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow18.jpg" ng-click="showImage(1018)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow19.jpg" ng-click="showImage(1019)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow20.jpg" ng-click="showImage(1020)"/></li>
+        </ul>
+      </div>
+  </div>
+    <div class="card cardsetup">
+      <div style="font-family: 'Futura Regular' ; background: transparent ; outline-style: none; font-size: 4vh; font-weight: bold" class="item item-divider">Photos from our TEAM</div>
+      <div>
+        <ul class="family-icon-scroller">
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow21.jpg" ng-click="showImage(201)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow22.jpg" ng-click="showImage(202)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow23.jpg" ng-click="showImage(203)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow24.jpg" ng-click="showImage(204)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow25.jpg" ng-click="showImage(205)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow26.jpg" ng-click="showImage(206)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow27.jpg" ng-click="showImage(207)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow28.jpg" ng-click="showImage(208)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow29.jpg" ng-click="showImage(209)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow30.jpg" ng-click="showImage(2010)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow31.jpg" ng-click="showImage(2011)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow32.jpg" ng-click="showImage(2012)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow33.jpg" ng-click="showImage(2013)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow34.jpg" ng-click="showImage(2014)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow35.jpg" ng-click="showImage(2015)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow36.jpg" ng-click="showImage(2016)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow37.jpg" ng-click="showImage(2017)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow38.jpg" ng-click="showImage(2018)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow39.jpg" ng-click="showImage(2019)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow40.jpg" ng-click="showImage(2020)"/></li>
         </ul>
       </div>
     </div>
-
+    <div class="card cardsetup">
+      <div style="font-family: 'Futura Regular'; background: transparent ; outline-style: none; font-size: 4vh; font-weight: bold" class="item item-divider">Photos from our TEAM</div>
+      <div>
+        <ul class="family-icon-scroller">
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow41.jpg" ng-click="showImage(301)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow42.jpg" ng-click="showImage(302)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow43.jpg" ng-click="showImage(303)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow44.jpg" ng-click="showImage(304)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow45.jpg" ng-click="showImage(305)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow46.jpg" ng-click="showImage(306)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow47.jpg" ng-click="showImage(307)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow48.jpg" ng-click="showImage(308)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow49.jpg" ng-click="showImage(309)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow50.jpg" ng-click="showImage(3010)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow51.jpg" ng-click="showImage(3011)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow52.jpg" ng-click="showImage(3012)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow53.jpg" ng-click="showImage(3013)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow54.jpg" ng-click="showImage(3014)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow55.jpg" ng-click="showImage(3015)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow56.jpg" ng-click="showImage(3016)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow57.jpg" ng-click="showImage(3017)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow58.jpg" ng-click="showImage(3018)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow59.jpg" ng-click="showImage(3019)"/></li>
+          <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow60.jpg" ng-click="showImage(3020)"/></li>
+        </ul>
+      </div>
+    </div>
 
     <script id="picturemodal.html" type="text/ng-template">
       <div class="modal image-modal transparent" ng-click="closeModal()">
