--- a/www/templates/schedule.html
+++ b/www/templates/schedule.html
@@ -13,7 +13,7 @@
     does-continue="true" show-pager="false">
       <ion-slide class="firstday">
         <div>
-          <h1>March 3 (first day)</h1>
+          <h1 class="scheduletitles">March 3 (first day)</h1>
           <ion-list>
             <ion-item class="dayitem">
               Hello
@@ -47,7 +47,7 @@
       </ion-slide>
       <ion-slide class="secondday">
         <div>
-          <h1>March 4 (second day)</h1>
+          <h1 class="scheduletitles">March 4 (second day)</h1>
           <ion-list>
             <ion-item class="dayitem">
               Hello
@@ -81,7 +81,7 @@
       </ion-slide>
       <ion-slide class="thirdday">
         <div>
-          <h1>March 5 (third day)</h1>
+          <h1 class="scheduletitles">March 5 (third day)</h1>
           <ion-list>
             <ion-item class="dayitem">
               Hello
