--- a/www/templates/sponsors.html
+++ b/www/templates/sponsors.html
@@ -8,6 +8,35 @@
     </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content>
-    <h1>The list of Sponsors have to finalized</h1>
+  <div >
+    <div class="sponsor item" style="background-color: #ef473a">
+      <h1 class="sponsortitle">Platinum Sponsors</h1>
+      <a target="_blank" href="http://http://marlene.it">
+        <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/marlene.png">
+      </a>
+      <a target="_blank" href="http://">
+        <img class="sponsorimg" src="">
+      </a>
+    </div>
+
+    <div class="sponsor item" style="background-color: gold">
+      <h1 class="sponsortitle">Gold Sponsors</h1>
+      <h1>Alpenstoff</h1>
+      <a target="_blank" href="http://lifeshot.eu">
+        <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/lifeshot.png">
+      </a>
+    </div>
+    <div class="sponsor item" style="background-color: silver">
+      <h1 class="sponsortitle">Silver Sponsors</h1>
+
+    </div>
+    <div class="sponsor item" style="background-color: sandybrown">
+      <h1 class="sponsortitle">Bronze Sponsors</h1>
+      <h1>Heineken</h1>
+      <a target="_blank" href="http://lifeshot.eu">
+        <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/reboot2.png">
+      </a>
+    </div>
+  </div>
   </ion-content>
 </ion-view>
