--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -12,20 +12,31 @@
       <h1 class="contanttitles">Main Coordinators</h1>
     </div>
     <div align="center" class="contactpanel">
-    <button class="yellowbutton contactbutton">+3934042014590</button>
+    <a class="yellowbutton contactbutton button" href="tel:+393404201590">+393404201590</a>
     </div>
     <div align="center" class="contactpanel">
-      <button class="yellowbutton contactbutton">+393464764333</button>
+      <a class="yellowbutton contactbutton button" href="tel:+393464764333">+393464764333</a>
     </div>
-
+    <div class="contacttitles" align="left">
+      <h1 class="contanttitles">Contact Person</h1>
+    </div>
+    <div align="center" class="contactpanel">
+      <a class="bluebutton contactbutton button" href="tel:+393349815707">+393349815707</a>
+    </div>
+    <div align="center" class="contactpanel">
+      <a class="bluebutton contactbutton button" href="tel:+393913991605">+393913991605</a>
+    </div>
+    <div align="center" class="contactpanel">
+      <a class="bluebutton contactbutton button" href="tel:+393332520126">+393332520126</a>
+    </div>
     <div class="contacttitles" align="left">
       <h1 class="contanttitles">Emergency</h1>
     </div>
     <div align="center" class="contactpanel">
-      <button class="redbutton contactbutton">112</button>
+      <a class="redbutton contactbutton button" href="tel:112">112</a>
     </div>
 
-    <div class="contacttitles" align="left">
+    <!--<div class="contacttitles" align="left">
       <h1 class="contanttitles">Other</h1>
     </div>
 
@@ -34,6 +45,6 @@
     </div>
     <div align="center" class="contactpanel">
       <button class="bluebutton contactbutton">118</button>
-    </div>
+    </div>-->
   </ion-content>
 </ion-view>
