--- a/www/templates/credits.html
+++ b/www/templates/credits.html
@@ -6,6 +6,6 @@
     </div>
   </ion-header-bar>
   <ion-content>
-    Credits... (not important now)
+    Created by Filippo Maria Cardano & Romeo Bellon
   </ion-content>
 </ion-modal-view>
