--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -9,7 +9,8 @@
     <div ng-click="credits()"><img id="sm-index-credits" class="svg" src="../img/svg/light92.svg"></div>
     <h3 class="title">SNOWDAYS</h3>
     <h5 class="sm-index-subtitle text-center">Europe’s biggest winter sport event for<br>
-      students organized by students.</h5>
+      students organized by students.<br>
+      March 3 4 5</h5>
     <button class="sm-button-squared" ng-click="goTo('info')">LEARN MORE</button>
   </div>
 </ion-content>
