--- a/www/templates/videos.html
+++ b/www/templates/videos.html
@@ -11,10 +11,8 @@
 
     <body ng-controller="test">
     <ion-content>
-      <h1>Videos</h1>
-      <div ng-click="openPicture()">
-        <a class="button" ng-click="openPicture()">hi there</a>
-      </div>
+      <iframe src="https://player.vimeo.com/video/154967003"style="margin-top: 2vh; width: 100vw; height: 57vw" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <iframe src="https://player.vimeo.com/video/125150630" style="margin-top: 2vh; width: 100vw; height: 57vw" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </ion-content>
     </body>
   </ion-view>
