--- a/www/templates/schedule.html
+++ b/www/templates/schedule.html
@@ -14,33 +14,39 @@
       <ion-slide class="firstday">
         <div>
           <h1 class="scheduletitles">March 3 (first day)</h1>
+          <h1 style="font-size: 4vw; font-family: 'Futura Regular'; padding: 0px">You can click on the time for more info!</h1>
           <ion-list>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfoone(101)">
+              <h1 class="leftside">09.00 - 17.00</h1>
+              <h1 class="rightside">Check In</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfoone(102)">
+              <h1 class="leftside">17.00 - 18.30</h1>
+              <h1 class="rightside">Dinner</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfoone(103)">
+              <h1 class="leftside">18.00 - 19.30</h1>
+              <h1 class="rightside">Bus leave from BZ</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfoone(104)">
+              <h1 class="leftside">19.00 - 21.30</h1>
+              <h1 class="rightside">Skiing</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfoone(105)">
+              <h1 class="leftside">21.45 - 22.30</h1>
+              <h1 class="rightside">Racing Competition!</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfoone(106)">
+              <h1 class="leftside">22.30 - 23.00</h1>
+              <h1 class="rightside">Opening Ceremony</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfoone(107)">
+              <h1 class="leftside">23.30 - 02.00</h1>
+              <h1 class="rightside">FLUO Party</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
-            </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfoone(108)">
+              <h1 class="leftside">01.00 – 02.30</h1>
+              <h1 class="rightside">Bus leave to BZ</h1>
             </ion-item>
           </ion-list>
         </div>
@@ -48,33 +54,55 @@
       <ion-slide class="secondday">
         <div>
           <h1 class="scheduletitles">March 4 (second day)</h1>
+          <h1 style="font-size: 4vw; font-family: 'Futura Regular'; padding: 0px">You can click on the time for more info!</h1>
           <ion-list>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfotwo(201)">
+              <h1 class="leftside">07.00 - 09.00</h1>
+              <h1 class="rightside">Breakfast</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfotwo(202)">
+              <h1 class="leftside">08.00 - 09.30</h1>
+              <h1 class="rightside">Bus leave from Bolzano</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfotwo(203)">
+              <h1 class="leftside">10.00 - 17.15</h1>
+              <h1 class="rightside">Skii and Snowboarding</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfotwo(204)">
+              <h1 class="leftside">10.00 - 12.00</h1>
+              <h1 class="rightside">Skii Race</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfotwo(205)">
+              <h1 class="leftside">11.00 - 12.00</h1>
+              <h1 class="rightside">Snowshoeing Group 1</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfotwo(206)">
+              <h1 class="leftside">12.00 - 14.00</h1>
+              <h1 class="rightside">Lunch</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfotwo(207)">
+              <h1 class="leftside">12.30 – 14.30</h1>
+              <h1 class="rightside">Paragliding Show</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfotwo(208)">
+              <h1 class="leftside">13.30 – 14.30</h1>
+              <h1 class="rightside">Snowshoeing Group 2</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfotwo(209)">
+              <h1 class="leftside">15.00 - 16.00</h1>
+              <h1 class="rightside">Snack Break</h1>
+            </ion-item>
+            <ion-item class="dayitem" ng-click="showExtraInfotwo(2010)">
+              <h1 class="leftside">15.45 - 17.15</h1>
+              <h1 class="rightside">Bus leave from Ultental</h1>
+            </ion-item>
+            <ion-item class="dayitem" ng-click="showExtraInfotwo(2011)">
+              <h1 class="leftside">19.30 - 21.00</h1>
+              <h1 class="rightside">Dinner</h1>
+            </ion-item>
+            <ion-item class="dayitem" ng-click="showExtraInfotwo(2012)">
+              <h1 class="leftside">22.00 - 02.30</h1>
+              <h1 class="rightside">TOGA PARTY!</h1>
             </ion-item>
           </ion-list>
         </div>
@@ -82,38 +110,81 @@
       <ion-slide class="thirdday">
         <div>
           <h1 class="scheduletitles">March 5 (third day)</h1>
+          <h1 style="font-size: 4vw; font-family: 'Futura Regular'; padding: 0px">You can click on the time for more info!</h1>
           <ion-list>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfothree(301)">
+              <h1 class="leftside">08.00 - 09.30</h1>
+              <h1 class="rightside">Breakfast</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfothree(302)">
+              <h1 class="leftside">09.30 - 11.00</h1>
+              <h1 class="rightside">Bus leave from Bolzano</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfothree(303)">
+              <h1 class="leftside">12.00 - 14.00</h1>
+              <h1 class="rightside">Lunch</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfothree(304)">
+              <h1 class="leftside">13.00 - 17.00</h1>
+              <h1 class="rightside">Various Activities</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfothree(305)">
+              <h1 class="leftside">13.30 - 19.00</h1>
+              <h1 class="rightside">Swimming Pool</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfothree(306)">
+              <h1 class="leftside">14.00 - 15.00</h1>
+              <h1 class="rightside">RedBull Riding!</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfothree(307)">
+              <h1 class="leftside">15.00 - 16.00</h1>
+              <h1 class="rightside">Salewa Table Boulder</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfothree(303)">
+              <h1 class="leftside">16.00 - 17.00</h1>
+              <h1 class="rightside">Snack Break</h1>
             </ion-item>
-            <ion-item class="dayitem">
-              Hello
+            <ion-item class="dayitem" ng-click="showExtraInfothree(304)">
+              <h1 class="leftside">18.00 - 20.00</h1>
+              <h1 class="rightside">Shower Time!</h1>
+            </ion-item>
+            <ion-item class="dayitem" ng-click="showExtraInfothree(305)">
+              <h1 class="leftside">18.30 - 20.00</h1>
+              <h1 class="rightside">Chill Out</h1>
+            </ion-item>
+            <ion-item class="dayitem" ng-click="showExtraInfothree(306)">
+              <h1 class="leftside">20.30 - 22.30</h1>
+              <h1 class="rightside">Dinner</h1>
+            </ion-item>
+            <ion-item class="dayitem" ng-click="showExtraInfothree(307)">
+              <h1 class="leftside">22.30 - 23.30</h1>
+              <h1 class="rightside">Final Ceremony</h1>
+            </ion-item>
+            <ion-item class="dayitem" ng-click="showExtraInfothree(308)">
+              <h1 class="leftside">23.30 - 04.00</h1>
+              <h1 class="rightside">PYJAMA PARTY!</h1>
+            </ion-item>
+            <ion-item class="dayitem" ng-click="showExtraInfothree(309)">
+              <h1 class="leftside">01.00 - 04.00</h1>
+              <h1 class="rightside">Bus leave from Canazei</h1>
             </ion-item>
           </ion-list>
         </div>
       </ion-slide>
     </ion-slide-box>
     </div>
+    <script type="text/ng-template" id="scheduleextra.html">
+      <ion-modal-view>
+        <ion-header-bar>
+          <h1 class="title">Extra Information</h1>
+          <div class="buttons">
+            <button class="button button-icon icon ion-ios-close-empty" ng-click="closeModal()"></button>
+          </div>
+        </ion-header-bar>
+        <ion-content>
+          <h1 class="scheduleextrainfo">{{extrainfotext}}</h1>
+        </ion-content>
+      </ion-modal-view>
+    </script>
   </ion-content>
 </ion-view>
