--- a/www/templates/trophy.html
+++ b/www/templates/trophy.html
@@ -8,6 +8,6 @@
     </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content>
-    <h1>Trophy</h1>
+    <h1>Still working on this</h1>
   </ion-content>
 </ion-view>
