visual bugs fixed.. added icons

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -5,8 +5,8 @@
     <source src="../img/background.webm" type="video/webm">
   </video>-->
   <div class="text-center">
-    <img src="../img/svg/lines7.svg" id="sm-index-bars" ng-click="toggleLeftSideMenu()">
-    <div ng-click="credits()"><img id="sm-index-credits" class="svg" src="../img/svg/light92.svg"></div>
+    <img src="../img/icon/menu.png" id="sm-index-bars" ng-click="toggleLeftSideMenu()">
+    <div ng-click="credits()"><img id="sm-index-credits" class="png" src="../img/icon/info.png"></div>
     <h3 class="title">SNOWDAYS</h3>
     <h5 class="sm-index-subtitle text-center">Europe’s biggest winter sport event for<br>
       students organized by students.<br>
