--- a/www/templates/pictures.html
+++ b/www/templates/pictures.html
@@ -3,7 +3,7 @@
     <ion-nav-back-button>
     </ion-nav-back-button>
     <ion-nav-buttons side="left">
-      <img src="../img/svg/lines7.svg" id="sm-menu-bars" menu-toggle="left">
+      <img src="../img/icon/menu.png" id="sm-menu-bars" menu-toggle="left">
     </ion-nav-buttons>
   </ion-nav-bar>
 
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="card cardsetup">
-      <div style="font-family: 'Futura Regular'; background: transparent ; outline-style: none; font-size: 4vh; font-weight: bold" class="item item-divider">Photos from our TEAM</div>
+      <div style="font-family: 'Futura Regular'; background: transparent ; outline-style: none; font-size: 4vh; font-weight: bold" class="item item-divider">Panoramas</div>
       <div>
         <ul class="family-icon-scroller">
           <li class="family-icon"><img class="picturesicon" ng-src="https://dl.dropboxusercontent.com/u/107006905/snow41.jpg" ng-click="showImage(301)"/></li>
