--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -8,29 +8,44 @@
     </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content>
-    <div class="contacttitles" align="left">
+    <div class="contanttitles" align="left">
       <h1 class="contanttitles">Main Coordinators</h1>
+    </div>
+    <div class="contactmininames">
+      <h1 style="padding: 0px; margin: 0px; font-size: 4vw">Francesco Vettoretti</h1>
     </div>
     <div align="center" class="contactpanel">
     <a class="yellowbutton contactbutton button" href="tel:+393404201590">+393404201590</a>
     </div>
+    <div class="contactmininames">
+      <h1 style="padding: 0px; margin: 0px; font-size: 4vw">Marco Martini</h1>
+    </div>
     <div align="center" class="contactpanel">
       <a class="yellowbutton contactbutton button" href="tel:+393464764333">+393464764333</a>
     </div>
-    <div class="contacttitles" align="left">
-      <h1 class="contanttitles">Contact Person</h1>
+    <div class="contanttitles" align="left">
+      <h1 class="contanttitles" style="margin-top: 1vh">Contact Person</h1>
+    </div>
+    <div class="contactmininames">
+      <h1 style="padding: 0px; margin: 0px; font-size: 4vw">Anna Tagliabue</h1>
     </div>
     <div align="center" class="contactpanel">
       <a class="bluebutton contactbutton button" href="tel:+393349815707">+393349815707</a>
     </div>
+    <div class="contactmininames">
+      <h1 style="padding: 0px; margin: 0px; font-size: 4vw">Leoni Mendler</h1>
+    </div>
     <div align="center" class="contactpanel">
       <a class="bluebutton contactbutton button" href="tel:+393913991605">+393913991605</a>
+    </div>
+    <div class="contactmininames">
+      <h1 style="padding: 0px; margin: 0px; font-size: 4vw">Chiara Fracasso</h1>
     </div>
     <div align="center" class="contactpanel">
       <a class="bluebutton contactbutton button" href="tel:+393332520126">+393332520126</a>
     </div>
-    <div class="contacttitles" align="left">
-      <h1 class="contanttitles">Emergency</h1>
+    <div class="contanttitles" align="left">
+      <h1 class="contanttitles" style="margin-top: 1vh">Emergency</h1>
     </div>
     <div align="center" class="contactpanel">
       <a class="redbutton contactbutton button" href="tel:112">112</a>
