--- a/www/templates/sponsors.html
+++ b/www/templates/sponsors.html
@@ -9,7 +9,7 @@
   </ion-nav-bar>
   <ion-content>
   <div >
-    <div class="sponsor item" style="background-color: #ef473a">
+    <div class="sponsor item" style="background-color: aquamarine; border-width: 0.7vh; border-style: solid">
       <h1 class="sponsortitle">Platinum Sponsors</h1>
       <a target="_blank" href="http://http://marlene.it">
         <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/marlene.png">
