--- a/www/templates/schedule.html
+++ b/www/templates/schedule.html
@@ -33,20 +33,16 @@
               <h1 class="rightside">Skiing</h1>
             </ion-item>
             <ion-item class="dayitem" ng-click="showExtraInfoone(105)">
-              <h1 class="leftside">21.45 - 22.30</h1>
-              <h1 class="rightside">Racing Competition!</h1>
+              <h1 class="leftside">21.40 - 22.20</h1>
+              <h1 class="rightside">Bus departure</h1>
             </ion-item>
             <ion-item class="dayitem" ng-click="showExtraInfoone(106)">
-              <h1 class="leftside">22.30 - 23.00</h1>
-              <h1 class="rightside">Opening Ceremony</h1>
+              <h1 class="leftside">22.30 - 03.00</h1>
+              <h1 class="rightside">FLUO Party</h1>
             </ion-item>
             <ion-item class="dayitem" ng-click="showExtraInfoone(107)">
               <h1 class="leftside">23.30 - 02.00</h1>
-              <h1 class="rightside">FLUO Party</h1>
-            </ion-item>
-            <ion-item class="dayitem" ng-click="showExtraInfoone(108)">
-              <h1 class="leftside">01.00 – 02.30</h1>
-              <h1 class="rightside">Bus leave to BZ</h1>
+              <h1 class="rightside">Opening Ceremony</h1>
             </ion-item>
           </ion-list>
         </div>
@@ -68,9 +64,13 @@
               <h1 class="leftside">10.00 - 17.15</h1>
               <h1 class="rightside">Skii and Snowboarding</h1>
             </ion-item>
-            <ion-item class="dayitem" ng-click="showExtraInfotwo(204)">
+            <ion-item class="dayitem" ng-click="showExtraInfotwo(2051)">
               <h1 class="leftside">10.00 - 12.00</h1>
-              <h1 class="rightside">Skii Race</h1>
+              <h1 class="rightside">Ski Course for Beginners</h1>
+            </ion-item>
+            <ion-item class="dayitem" ng-click="showExtraInfotwo(204)">
+              <h1 class="leftside">10.30 - 11.30</h1>
+              <h1 class="rightside">Salewa Ski Race</h1>
             </ion-item>
             <ion-item class="dayitem" ng-click="showExtraInfotwo(205)">
               <h1 class="leftside">11.00 - 12.00</h1>
@@ -97,7 +97,7 @@
               <h1 class="rightside">Bus leave from Ultental</h1>
             </ion-item>
             <ion-item class="dayitem" ng-click="showExtraInfotwo(2011)">
-              <h1 class="leftside">19.30 - 21.00</h1>
+              <h1 class="leftside">18.30 - 20.00</h1>
               <h1 class="rightside">Dinner</h1>
             </ion-item>
             <ion-item class="dayitem" ng-click="showExtraInfotwo(2012)">
@@ -121,15 +121,15 @@
               <h1 class="rightside">Bus leave from Bolzano</h1>
             </ion-item>
             <ion-item class="dayitem" ng-click="showExtraInfothree(303)">
-              <h1 class="leftside">12.00 - 14.00</h1>
+              <h1 class="leftside">11.30 - 13.30</h1>
               <h1 class="rightside">Lunch</h1>
             </ion-item>
             <ion-item class="dayitem" ng-click="showExtraInfothree(304)">
               <h1 class="leftside">13.00 - 17.00</h1>
-              <h1 class="rightside">Various Activities</h1>
+              <h1 class="rightside">Tournaments</h1>
             </ion-item>
             <ion-item class="dayitem" ng-click="showExtraInfothree(305)">
-              <h1 class="leftside">13.30 - 19.00</h1>
+              <h1 class="leftside">14.00 - 19.00</h1>
               <h1 class="rightside">Swimming Pool</h1>
             </ion-item>
             <ion-item class="dayitem" ng-click="showExtraInfothree(306)">
@@ -140,31 +140,31 @@
               <h1 class="leftside">15.00 - 16.00</h1>
               <h1 class="rightside">Salewa Table Boulder</h1>
             </ion-item>
-            <ion-item class="dayitem" ng-click="showExtraInfothree(303)">
+            <ion-item class="dayitem" ng-click="showExtraInfothree(308)">
               <h1 class="leftside">16.00 - 17.00</h1>
               <h1 class="rightside">Snack Break</h1>
             </ion-item>
-            <ion-item class="dayitem" ng-click="showExtraInfothree(304)">
-              <h1 class="leftside">18.00 - 20.00</h1>
+            <ion-item class="dayitem" ng-click="showExtraInfothree(309)">
+              <h1 class="leftside">17.00 - 20.00</h1>
               <h1 class="rightside">Shower Time!</h1>
             </ion-item>
-            <ion-item class="dayitem" ng-click="showExtraInfothree(305)">
+            <ion-item class="dayitem" ng-click="showExtraInfothree(3010)">
               <h1 class="leftside">18.30 - 20.00</h1>
               <h1 class="rightside">Chill Out</h1>
             </ion-item>
-            <ion-item class="dayitem" ng-click="showExtraInfothree(306)">
+            <ion-item class="dayitem" ng-click="showExtraInfothree(3011)">
               <h1 class="leftside">20.30 - 22.30</h1>
               <h1 class="rightside">Dinner</h1>
             </ion-item>
-            <ion-item class="dayitem" ng-click="showExtraInfothree(307)">
+            <ion-item class="dayitem" ng-click="showExtraInfothree(3012)">
               <h1 class="leftside">22.30 - 23.30</h1>
-              <h1 class="rightside">Final Ceremony</h1>
+              <h1 class="rightside">Awards and Final Ceremony</h1>
             </ion-item>
-            <ion-item class="dayitem" ng-click="showExtraInfothree(308)">
+            <ion-item class="dayitem" ng-click="showExtraInfothree(3013)">
               <h1 class="leftside">23.30 - 04.00</h1>
               <h1 class="rightside">PYJAMA PARTY!</h1>
             </ion-item>
-            <ion-item class="dayitem" ng-click="showExtraInfothree(309)">
+            <ion-item class="dayitem" ng-click="showExtraInfothree(3014)">
               <h1 class="leftside">01.00 - 04.00</h1>
               <h1 class="rightside">Bus leave from Canazei</h1>
             </ion-item>
@@ -183,6 +183,7 @@
         </ion-header-bar>
         <ion-content>
           <h1 class="scheduleextrainfo">{{extrainfotext}}</h1>
+          <h1 class="scheduleextrainfo" style="padding-top: 2vh">{{extrainfotext2}}</h1>
         </ion-content>
       </ion-modal-view>
     </script>
